[package]
name = "toppa_drill"
version = "0.1.0"
authors = ["Daniel A. <da.ahrens@outlook.de>"]
publish = false

include = ["src/**", "Cargo.toml", "resources/**", "Assets/**", "docs/**"]

[lib]
name = "toppa_drill_lib"
path = "src/lib.rs"

[[bin]]
name = "toppa_drill"
path = "src/main.rs"

[dependencies]
# amethyst = { git = "https://github.com/Telzhaak/amethyst", features = []}
amethyst = { path = "E:\\Workspaces\\Rust\\Amethyst\\00_Fork", features = ["saveload"]}
# amethyst = { git = "https://github.com/Telzhaak/amethyst", features = ["nightly"]}

log = "0.4.5"
serde_derive = "1.0"
ron = "0.1.3"
serde = { version = "1.0", features = ["serde_derive"] }
# specs = { version = "0.12", features = ["serde", "common"]}

[build-dependencies]
